--- a/composer.json
+++ b/composer.json
@@ -4,12 +4,13 @@
     "description": "Teste de Desenvolvimento Adopts",
     "require": {
         "php": "^7.2.5",
+        "ext-json": "*",
         "fideloper/proxy": "^4.2",
         "fruitcake/laravel-cors": "^1.0",
         "guzzlehttp/guzzle": "^6.5",
         "laravel/framework": "^7.0",
         "laravel/tinker": "^2.0",
-        "ext-json": "*"
+        "league/fractal": "^0.19.2"
     },
     "require-dev": {
         "facade/ignition": "^2.0",
