--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "fruitcake/laravel-cors": "^1.0",
         "guzzlehttp/guzzle": "^6.5",
         "laravel/framework": "^7.0",
+        "laravel/passport": "^9.2",
         "laravel/tinker": "^2.0",
         "league/fractal": "^0.19.2"
     },
